tests/fixtures/typecheck/invalid/bad_indicator_length_type.sr
rule "Bad indicator length" in underlying:
    when bar.close > ema(close, 3%):
        then annotate(note="bad")

